# SleepPanda

./: README.md  README_ZH.md
.github/workflows/: Rpi3b_QEMU.yml  configure  gtest_demo_cmake_action.yml  helloworld_action.yml  qemu_rpi4b_action.yml  rpi4b-qemu_action.yml
doc/BOM/: SleepPanda_BOM.xlsx
doc/datasheet/: README.md
doc/meeting/: M1_0118.docx  M1_0118_ZH.docx  M2_0201.docx  M2_0201_ZH.docx  M3_0208.docx  M3_0208_ZH.docx  M4_0215.docx  M4_0215_ZH.docx  README.md
doc/pitch_session/: README.md  team2-sleeppanda-release-1.1.pptx  team2-sleeppanda-release-1.2.pptx  team2-sleeppanda-release1.0.pptx  team2_sleeppanda_FinalDocument.docx
doc/project management/: Gantt Chart Template.xltx  Sleep Panda Gantt Chart.xlsx
src/app/: CMakeLists.txt  SleepPanda.cpp
src/app/Buzzer/: Buzzer.cpp  Buzzer.h  CMakeLists.txt
src/app/Buzzer/test/: Buzzer_Test.cpp  CMakeLists.txt
src/app/Camera/: CMakeLists.txt  Camera.cpp  Camera.h  OpenCVConfig.cmake  WindowsForCamera.cpp  WindowsForCamera.h
src/app/Camera/OpenCV_Test/: OpenCV_Test  OpenCV_Test.cpp
src/app/Camera/test/: CMakeLists.txt  Camera_Test.cpp
src/app/Config/: Config.h
src/app/Inky/: Readme.md
src/app/Inky/include/: BoundingBox.hpp  Color.hpp  Dither.hpp  Draw.hpp  HttpService.hpp  I2CDevice.hpp  Image.hpp  ImageIO.hpp  Inky.hpp  QRCode.hpp  SPIDevice.hpp
src/app/Inky/src/: Dither.cpp  Draw.cpp  Image.cpp  ImageIO.cpp  QRCode.cpp  SPIDevice.cpp
src/app/MAX30101/: CMakeLists.txt  MAX30101.cpp  MAX30101.h  algorithm2.cpp  algorithm2.h  algorithm2_by_RF.cpp  algorithm2_by_RF.h
src/app/MAX30101/ref/: RD117piA  RD117piA.cpp  README.md  algorithm2.cpp  algorithm2.h  algorithm2_by_RF.h  max30102pi.cpp  max30102pi.h  oxiData.csv
src/app/MAX30101/test/: CMakeLists.txt  MAX30101_Test.cpp
src/app/SoundSensor/: CMakeLists.txt  SoundSensor.cpp  SoundSensor.h
src/app/SoundSensor/test/: CMakeLists.txt  SoundSensor_Test.cpp
src/app/WM8960/: CMakeLists.txt  WM8960.cpp  WM8960.h
src/app/WM8960/test/: CMakeLists.txt  WM8960_Test.cpp
src/app/Window/: CMakeLists.txt  Window.cpp  Window.h
src/app/Window/test/: CMakeLists.txt  Window_Test.cpp
src/app/config/: config.h
src/app/gtest_demo/: CMakeLists.txt  gtest_demo  gtest_demo.cpp
src/app/helloworld/: Makefile  helloworld  helloworld.cpp  helloworld_test  helloworld_test.cpp
src/config/: config-5.15.0-1023-raspi
src/drivers/helloworld/: .Module.symvers.cmd  .helloworld.ko.cmd  .helloworld.mod.cmd  .helloworld.mod.o.cmd  .helloworld.o.cmd  .modules.order.cmd  Makefile  helloworld.c  helloworld.ko  helloworld.mod  helloworld.mod.c  modules.order
src/kernel/linux-raspi-headers-5.15.0-1023/arch/arm/boot/dts/: Makefile
src/kernel/linux-raspi-headers-5.15.0-1023/arch/arm/boot/dts/overlays/: Makefile
src/kernel/linux-raspi-headers-5.15.0-1023/drivers/gpio/: Kconfig  Makefile
src/kernel/linux-raspi-headers-5.15.0-1023/drivers/hwmon/: Kconfig  Makefile
src/kernel/linux-raspi-headers-5.15.0-1023/drivers/i2c/busses/: Kconfig  Makefile
src/kernel/linux-raspi-headers-5.15.0-1023/drivers/media/i2c/: Kconfig  Makefile
src/kernel/linux-raspi-headers-5.15.0-1023/drivers/mfd/: Kconfig  Makefile
src/kernel/linux-raspi-headers-5.15.0-1023/drivers/misc/: Kconfig  Makefile
src/kernel/linux-raspi-headers-5.15.0-1023/include/drm/: drm_panel.h
src/kernel/linux-raspi-headers-5.15.0-1023/scripts/: Makefile.dtbinst
src/kernel/linux-raspi-headers-5.15.0-1023/sound/soc/codecs/: Kconfig  Makefile
src/main/: Buzzer.cpp  Buzzer.h  CMakeLists.txt  config.h
tools/gtest/lib/: libgmock.so.1.13.0  libgmock_main.so.1.13.0  libgtest_main.so.1.13.0
tools/gtest/rpios_32bit/lib/: libgmock.so.1.13.0  libgmock_main.so.1.13.0  libgtest.so.1.13.0
tools/gtest/rpios_32bit/lib/cmake/GTest/: GTestConfigVersion.cmake  GTestTargets-noconfig.cmake  GTestTargets.cmake
tools/gtest/rpios_32bit/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
tools/gtest/ubuntu22.04_64bit/lib/: libgtest.so.1.13.0
